samples/_failures_safe/1761530707_86ca41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c15e4c30.c: In function ‘main’:
./samples/SAFE/__tmp_c15e4c30.c:160:17: error: expected expression at end of input
  160 |                 } else if (
      |                 ^
./samples/SAFE/__tmp_c15e4c30.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c15e4c30.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c15e4c30.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c15e4c30.c:160:17: error: expected declaration or statement at end of input
